; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_get_pointer_fc_context.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_get_pointer_fc_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_CONTEXT_TOPLEVELPARAM = common dso_local global i32 0, align 4
@FC_UP = common dso_local global i32 0, align 4
@ATTR_OUT = common dso_local global i32 0, align 4
@TYPE_CONTEXT_PARAM = common dso_local global i32 0, align 4
@current_iface = common dso_local global i32 0, align 4
@FC_OP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32*, i32*, i32)* @get_pointer_fc_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @get_pointer_fc_context(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @TYPE_CONTEXT_TOPLEVELPARAM, align 4
  %12 = icmp eq i32 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @get_pointer_fc(i32* %8, i32* %9, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* @FC_UP, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %33

18:                                               ; preds = %3
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* @ATTR_OUT, align 4
  %21 = call i64 @is_attr(i32* %19, i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %33

23:                                               ; preds = %18
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* @TYPE_CONTEXT_PARAM, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %33

27:                                               ; preds = %23
  %28 = load i32, i32* @current_iface, align 4
  %29 = call i64 @is_object(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %27
  %32 = load i32, i32* @FC_OP, align 4
  store i32 %32, i32* %7, align 4
  br label %33

33:                                               ; preds = %31, %27, %23, %18, %3
  %34 = load i32, i32* %7, align 4
  %35 = trunc i32 %34 to i8
  ret i8 %35
}

declare dso_local i32 @get_pointer_fc(i32*, i32*, i32) #1

declare dso_local i64 @is_attr(i32*, i32) #1

declare dso_local i64 @is_object(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
